# LabelTransaction

./: .gitignore  README.md  excel_connector.py  exporter.py  labeler.py  labels.json  main.py  models.py  parser.py  pyproject.toml  rules.py
resources/: template.xlsx
src/: labeler.py  main.py  reader.py  transactions.py
test/: test_labeler.py
test/resources/: example-labels.json
tests/: test_rules.py
tui/: CSVCategorizer.py  ExtracMonth.py  existing.py
